# Mushroom-Classification

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml  tests.yml
docs/: data.md
models/: .gitignore  enc.pkl  model.pkl
notebooks/: notebook.ipynb
src/: api.py  env.py  mushroom.py  train.py  typing.py  utils.py
src/data/: __init__.py  preprocess.py
src/models/: __init__.py  download_from_registry.py  hpo.py  register.py  utils.py
src/prediction/: __init__.py  prepare_features.py
static/: styles.css
templates/: index.html  submit.html
tests/: data.csv  test_api.py  test_data.py  test_hyper_parameter_optimization.py  test_model_loader.py  test_mushroom.py  test_prediction.py  test_preprocess.py  test_registry.py  test_train.py
